Active Color Attribute switches after save and reverting file #107067

Closed
opened 2023-04-18 11:56:53 +02:00 by Julien Kaspar · 7 comments
Member

System Information
Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03

Blender Version
Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-16 10:41, hash: e1571cb10517

Caused by 6514bb05ea

Short description of error
When the last action on an object was to switch between active color attributes, it will switch back to the previously active color attribute after saving and reloading the file.
This can happen on multiple objects at once when reloading. If the color attribute was painted in before saving, it will stay active when reloading.

Exact steps for others to reproduce the error

  • Add three color attributes in the object data properties on a primitive object (each a different color)
  • Click on one of them to switch the active one
  • Save and reload the file
  • Try this multiple times between different color attributes (each time it will switch back to the previously active one)

Same is true for the default color attribute btw. [Camera icon]

**System Information** Operating system: Linux-6.2.11-gentoo-x86_64-AMD_Ryzen_Threadripper_1950X_16-Core_Processor-with-glibc2.36 64 Bits, X11 UI Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 530.41.03 **Blender Version** Broken: version: 3.6.0 Alpha, branch: HEAD (modified), commit date: 2023-04-16 10:41, hash: `e1571cb10517` Caused by 6514bb05ea5a **Short description of error** When the last action on an object was to switch between active color attributes, it will switch back to the previously active color attribute after saving and reloading the file. This can happen on multiple objects at once when reloading. If the color attribute was painted in before saving, it will stay active when reloading. **Exact steps for others to reproduce the error** - Add three color attributes in the object data properties on a primitive object (each a different color) - Click on one of them to switch the active one - Save and reload the file - Try this multiple times between different color attributes (each time it will switch back to the previously active one) Same is true for the default color attribute btw. [Camera icon]
Julien Kaspar added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-04-18 11:56:53 +02:00
Member

Confirmed

Confirmed
Philipp Oeser added
Status
Confirmed
Module
Modeling
and removed
Status
Needs Triage
labels 2023-04-19 13:02:24 +02:00
Member

Same is true for the default color attribute btw. [Camera icon]

Same is true for the default color attribute btw. [Camera icon]

There seems to be a lot of issues with active status right now. Looks like @Baardaap was doing something, and now there's a PR associated with it. Not sure if they will help, but it seems close

There seems to be a lot of issues with active status right now. Looks like @Baardaap was doing something, and now there's a PR associated with it. Not sure if they will help, but it seems close
Member

If the color attribute was painted in before saving, it will stay active when reloading.

Not even this is working on my side tbh

> If the color attribute was painted in before saving, it will stay active when reloading. Not even this is working on my side tbh
Member

When checking mesh_blend_write, the active_color_attribute is actually there when encoding undo steps (coming from BLO_write_file_mem), but NOT there (NULL), when actually saving the file (coming from BLO_write_file).

Maybe that gives a hint already

When checking `mesh_blend_write`, the active_color_attribute is actually there when encoding undo steps (coming from `BLO_write_file_mem`), but NOT there (NULL), when actually saving the file (coming from `BLO_write_file`). Maybe that gives a hint already
Member

Caused by 6514bb05ea

Caused by 6514bb05ea5a
Philipp Oeser added
Priority
High
and removed
Priority
Normal
labels 2023-04-19 13:54:34 +02:00

That seems related, yes. probably the string doesn't make it into the blendfile?

I'll have a look , but @HooglyBoogly is probably faster in fixing this

That seems related, yes. probably the string doesn't make it into the blendfile? I'll have a look , but @HooglyBoogly is probably faster in fixing this
Martijn Versteegh self-assigned this 2023-04-19 17:48:03 +02:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-04-19 22:27:16 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#107067
No description provided.